--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,4 +1,5 @@
 /* Banner CSS */
+
 .banner {
     padding-top: 225px;
     padding-bottom: 260px;
@@ -19,12 +20,11 @@
         height: 140.692px;
         flex-shrink: 0;
         border-radius: 700.123px;
-        background:#15B887;
+        background: #15B887;
         filter: blur(150px);
         z-index: 1;
         transform: translateY(-40%);
-        
-        @include mmd{
+        @include mmd {
             top: 20%;
         }
     }
@@ -34,7 +34,7 @@
         & span {
             position: relative;
             z-index: 1;
-            &::before{
+            &::before {
                 position: absolute;
                 content: "";
                 left: 0;
@@ -50,7 +50,7 @@
             @include font-120;
             margin-bottom: 50px;
             line-height: 1.3;
-            @include mmd{
+            @include mmd {
                 line-height: 1.6;
             }
         }
@@ -60,32 +60,32 @@
             opacity: 0.8;
         }
         & .boxed__btn {
-          margin-right: 20px;
-          margin-bottom: 20px;
-          min-width: 232px;
-          text-align: center;
-          @include sm{
-            margin-right: 15px;
-            margin-bottom: 15px;
-            min-width: 180px;
-          }
+            margin-right: 20px;
+            margin-bottom: 20px;
+            min-width: 232px;
+            text-align: center;
+            @include sm {
+                margin-right: 15px;
+                margin-bottom: 15px;
+                min-width: 180px;
+            }
         }
-        @include lg{
+        @include lg {
             width: 95%;
         }
     }
-    & .banner-img{
+    & .banner-img {
         position: absolute;
         top: 50%;
         right: 0;
         transform: translateY(-45%);
         z-index: -1;
         width: 50%;
-        @include mmd{
+        @include mmd {
             display: none;
         }
     }
-    & .responsive_img{
+    & .responsive_img {
         width: 90%;
         margin-left: auto;
     }
@@ -95,7 +95,7 @@
         top: 0px;
         max-width: 67px;
         z-index: -1;
-        @include sm{
+        @include sm {
             left: -10px;
             max-width: 50px;
         }
@@ -106,7 +106,7 @@
         bottom: 70px;
         max-width: 314px;
         z-index: -1;
-        @include sm{
+        @include sm {
             left: 0;
             max-width: 100px;
         }
@@ -118,7 +118,7 @@
         transform: translateX(150px);
         max-width: 150px;
         z-index: -1;
-        @include sm{
+        @include sm {
             left: auto;
             right: 0;
             bottom: -10px;
@@ -127,15 +127,19 @@
         }
     }
 }
+
+
 /* Banner CSS */
 
+
 /* aplication__area CSS */
-.aplication__area{
+
+.aplication__area {
     padding-top: 127px;
-    @include sm{
+    @include sm {
         padding-top: 60px;
     }
-   & .aplication__box{
+    & .aplication__box {
         position: relative;
         padding-top: 30px;
         padding-bottom: 250px;
@@ -143,19 +147,19 @@
         background-repeat: no-repeat;
         background-position: bottom left;
         background-size: cover;
-        @include mmd{
+        @include mmd {
             padding-bottom: 200px;
         }
-        @include sm{
+        @include sm {
             padding-bottom: 100px;
         }
-        & .aplication__shap{
+        & .aplication__shap {
             position: absolute;
             right: 2%;
             bottom: -8%;
             max-width: 314px;
             z-index: 0;
-            @include mmd{
+            @include mmd {
                 max-width: 214px;
             }
         }
@@ -168,9 +172,9 @@
             padding: 41px 43px;
             margin-top: -80px;
             z-index: 2;
-            border:1px solid transparent;
+            border: 1px solid transparent;
             @include transition;
-            @include sm{
+            @include sm {
                 margin-top: 60px;
                 margin-bottom: 40px;
                 border-radius: 15px;
@@ -196,118 +200,121 @@
             & h3 {
                 margin-bottom: 20px;
             }
-            & p{
+            & p {
                 @include font-22;
                 color: $_color_0_70;
                 text-transform: capitalize;
             }
-            &:hover{
-                border:1px solid $primary;
+            &:hover {
+                border: 1px solid $primary;
             }
-            &:hover .box__icon{
+            &:hover .box__icon {
                 transform: scaleX(-1);
             }
         }
-        & .space-evenly{
+        & .space-evenly {
             justify-content: space-evenly;
         }
-        
     }
-    & .section__title{
+    & .section__title {
         margin-bottom: 200px;
-        @include sm{
+        @include sm {
             margin-bottom: 50px;
         }
     }
 }
+
+
 /* aplication__area CSS */
 
+
 /* wallet__area CSS */
-.wallet__area{
+
+.wallet__area {
     padding-top: 130px;
-    padding-bottom: 0px;   
-    @include sm{
+    padding-bottom: 0px;
+    @include sm {
         padding-top: 35px;
         padding-bottom: 35px;
     }
-    
-    & .wallet_single_box{
+    & .wallet_single_box {
         max-width: 580px;
         @include border__radius__42;
         border-top: 1px solid rgba(0, 0, 0, 0.20);
         border-bottom: 3px solid rgba(0, 0, 0, 0.20);
         background: $_212B3A;
         padding: 26px 50px 31px;
-        @include mmd{
+        @include mmd {
             padding: 30px 30px 30px;
         }
-        & h3{
+        & h3 {
             margin-bottom: 30px;
         }
-        & p{
-           color: $_color_0_70;
-           max-width: 387px;
-           text-transform: capitalize;
+        & p {
+            color: $_color_0_70;
+            max-width: 387px;
+            text-transform: capitalize;
         }
-        & .inline__btn{
+        & .inline__btn {
             margin-top: 50px;
             min-width: 186px;
             text-align: center;
-            @include sm{
+            @include sm {
                 min-width: 150px;
             }
         }
     }
-    & .w_i{
+    & .w_i {
         position: relative;
         z-index: 1;
         margin-bottom: 0;
-       
-        @include xxl{
+        @include xxl {
             margin-left: 10%;
             margin-right: -10%;
         }
-       
         max-width: 650px;
-        @include mmd{
+        @include mmd {
             margin-top: 30px;
             max-width: 500px;
         }
-        @include sm{
+        @include sm {
             margin-top: 70px;
             max-width: 400px;
         }
-        & img{
+        & img {
             transition: all .3s ease-in-out;
-
         }
     }
-    & .section__title{
+    & .section__title {
         margin-bottom: 78px;
-        @include sm{
+        @include sm {
             margin-bottom: 45px;
         }
     }
 }
+
 .eip {
     position: absolute;
-    max-width:40% ;
+    max-width: 40%;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
+
+
 /* aplication__area CSS */
 
+
 /* trade__area CSS */
-.trade__area{
+
+.trade__area {
     padding-top: 115px;
     padding-bottom: 88px;
-    
-    @include sm{
+    @include sm {
         padding-top: 35px;
         padding-bottom: 35px;
     }
-    & .section__title{
+    & .section__title {
         max-width: 790px;
         margin: 0 auto 60px;
     }
@@ -324,19 +331,19 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            & h3{
+            & h3 {
                 margin-bottom: 24px;
-                @include sm{
+                @include sm {
                     margin-bottom: 15px;
                 }
             }
-            & p{
+            & p {
                 color: $_color_0_70;
                 @include font-22;
                 text-transform: capitalize;
                 font-weight: 400;
             }
-            @include sm{
+            @include sm {
                 width: 100% !important;
                 display: flex;
                 flex-direction: column-reverse;
@@ -350,15 +357,14 @@
                 max-width: 200px;
                 margin-left: auto;
                 margin-right: auto;
-                @include mmd{
+                @include mmd {
                     max-width: 150px;
                     margin-top: 30px;
                 }
-                @include sm{
+                @include sm {
                     max-width: 100px;
                     margin-top: 0px;
                     margin-left: 0;
-                    
                 }
             }
         }
@@ -371,23 +377,23 @@
             padding-bottom: 140px;
             padding-left: 160px;
             padding-right: 160px;
-            @include mmd{
+            @include mmd {
                 padding: 80px 80px 80px;
             }
-            @include sm{
+            @include sm {
                 padding: 30px 30px 30px;
                 display: flex;
                 flex-direction: column-reverse;
                 align-items: start;
             }
-            & .trade__content{
+            & .trade__content {
                 max-width: 615px;
             }
-            & .trade__Img{
+            & .trade__Img {
                 text-align: center;
                 margin-top: 0;
                 width: 100%;
-                @include sm{
+                @include sm {
                     margin-top: 0px;
                     margin-right: auto;
                 }
@@ -395,59 +401,68 @@
         }
     }
 }
+
+
 /* trade__area CSS */
 
+
 /* snipe__area CSS */
-.snipe__area{
+
+.snipe__area {
     padding-top: 100px;
     padding-bottom: 70px;
-    
-    @include sm{
+    @include sm {
         padding-top: 35px;
     }
-    & .section__title{
+    & .section__title {
         max-width: 746px;
         margin: 0 auto 59px;
     }
-    & .single__snipe__item{
+    & .single__snipe__item {
         @include border__radius__42;
         background: $_212B3A;
-        padding:70px 35px 30px;
+        padding: 70px 35px 30px;
         height: 100%;
         margin-bottom: 30px;
-        @include sm{
+        @include sm {
             padding-top: 30px;
         }
-        & h3{
+        & h3 {
             margin-bottom: 25px;
         }
-        & p{
+        & p {
             color: $_color_0_70;
             text-transform: capitalize;
         }
-        & .snipe__Img{
+        & .snipe__Img {
             max-width: 150px;
-            margin:0px auto 32px;
+            margin: 0px auto 32px;
         }
     }
-    & .row{
-        & .col-lg-4{
+    & .row {
+        & .col-lg-4 {
             margin-bottom: 30px;
         }
     }
 }
+
 .snipe__wrapper .col-lg-4:nth-child(2) .single__snipe__item {
     padding-left: 54px;
     padding-right: 54px;
 }
+
 .snipe__wrapper .col-lg-4:last-child .single__snipe__item {
     padding-left: 30px;
     padding-right: 30px;
 }
+
+
 /* snipe__area CSS */
 
+
 /* industrylux__area CSS */
-.industrylux__area{
+
+.industrylux__area {
     position: relative;
     z-index: 1;
     padding-top: 140px;
@@ -456,30 +471,30 @@
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
-    @include sm{
+    @include sm {
         padding-top: 70px;
         padding-bottom: 70px;
     }
-    & .industrylux__wrapper{
-        & .section__title{
+    & .industrylux__wrapper {
+        & .section__title {
             margin-bottom: 190px;
-            @include lg{
+            @include lg {
                 margin-bottom: 70px;
             }
-            @include mmd{
+            @include mmd {
                 margin-bottom: 70px;
             }
-            & p{
+            & p {
                 @include font-27;
             }
         }
-        & .single__industrylux__item{
+        & .single__industrylux__item {
             display: flex;
             align-items: center;
             gap: 40px;
             margin-bottom: 37px;
             @include font-30;
-            @include sm{
+            @include sm {
                 display: block;
             }
             & .btn {
@@ -491,50 +506,52 @@
                 color: $_white;
                 @include transition;
                 @include font-30;
-                @include sm{
+                @include sm {
                     margin-bottom: 15px;
                     min-width: 230px;
                 }
-                &:hover{
-                    background:$_212B3A;
+                &:hover {
+                    background: $_212B3A;
                     color: $primary;
                 }
             }
         }
-        & .industrylux_img{
+        & .industrylux_img {
             width: 100%;
             margin-bottom: 0;
             margin-top: 30px;
             margin-left: auto;
-            & img{
-               max-width: 360px;
+            & img {
+                max-width: 360px;
             }
-            @include mmd{
+            @include mmd {
                 margin-left: 0;
                 text-align: left !important;
             }
-            
         }
     }
 }
+
+
 /* industrylux__area CSS */
 
 
 /* comunity__area CSS */
-.comunity__area{
+
+.comunity__area {
     padding-top: 100px;
     padding-bottom: 95px;
-    @include sm{
+    @include sm {
         padding-top: 70px;
         padding-bottom: 35px;
     }
-    & .section__title{
+    & .section__title {
         margin-bottom: 115px;
-        @include sm{
+        @include sm {
             margin-bottom: 45px;
         }
     }
-    & .single__comunity__item{
+    & .single__comunity__item {
         height: 100%;
         @include border__radius__42;
         background: $_212B3A;
@@ -542,13 +559,13 @@
         display: flex;
         align-items: start;
         gap: 30px;
-        @include sm{
+        @include sm {
             flex-direction: column-reverse;
             align-items: start;
             padding: 30px;
             gap: 15px;
         }
-        & .comunity__Img{
+        & .comunity__Img {
             width: 131.724px;
             height: 131.724px;
             background-color: #074052;
@@ -557,16 +574,15 @@
             align-items: center;
             justify-content: center;
             border-radius: 50%;
-            border:1px solid $primary;
-            @include sm{
+            border: 1px solid $primary;
+            @include sm {
                 width: 100px;
                 height: 100px;
                 padding: 20px;
-
             }
         }
-        & .comunity__content{
-            & span{
+        & .comunity__content {
+            & span {
                 color: $primary;
                 text-transform: uppercase;
                 @include font-16;
@@ -574,31 +590,30 @@
                 margin-bottom: 12px;
                 display: inline-block;
             }
-            & h3{
+            & h3 {
                 margin-bottom: 33px;
             }
-            & p{
+            & p {
                 color: $_color_0_70;
                 @include font-18;
                 text-transform: capitalize;
                 margin-bottom: 28px;
-                @include sm{
+                @include sm {
                     margin-bottom: 10px;
                 }
             }
-            & .inline__btn{
+            & .inline__btn {
                 margin-right: 20px;
                 margin-top: 25px;
                 min-width: 186px;
                 text-align: center;
-                @include sm{
+                @include sm {
                     margin-right: 15px;
-                    padding:15px 30px;
+                    padding: 15px 30px;
                     min-width: 160px;
                 }
-                
             }
-            & .inline__btn:last-child{
+            & .inline__btn:last-child {
                 margin-right: 0;
             }
         }
@@ -607,27 +622,31 @@
             align-items: center;
             display: flex;
         }
-
     }
 }
+
 .comunity__area .single__comunity__item .comunity__content .inline__btn img {
     max-width: 70px;
     margin-right: 10px;
     margin-top: -4px;
 }
+
+
 /* comunity__area CSS */
 
+
 /* Faq__area CSS */
-.faq__area{
+
+.faq__area {
     padding-top: 120px;
     padding-bottom: 90px;
-    @include sm{
+    @include sm {
         padding-top: 30px;
         padding-bottom: 20px;
     }
-    & .section__title{
+    & .section__title {
         margin-bottom: 110px;
-        @include sm{
+        @include sm {
             margin-bottom: 45px;
         }
     }
@@ -636,12 +655,12 @@
         border-radius: 15px !important;
         background: $_212B3A;
         border: 0;
-        padding:28px 40px;
-        @include sm{
-            padding:20px 10px;
+        padding: 28px 40px;
+        @include sm {
+            padding: 20px 10px;
             border-radius: 10px !important;
         }
-        & .accordion-button{
+        & .accordion-button {
             font-family: 'Satoshi-Regular';
             font-weight: 400;
             padding-bottom: 0;
@@ -650,21 +669,20 @@
             @include font-22;
             color: $_white;
             text-transform: capitalize;
-
         }
-        & .accordion-body{
+        & .accordion-body {
             color: $_white;
             opacity: 0.78;
             @include font-16;
             line-height: 170%;
             padding-bottom: 0;
             max-width: 82%;
-            @include sm{
+            @include sm {
                 max-width: 100%;
             }
         }
     }
-    & .accordion{
+    & .accordion {
         --bs-accordion-border-color: transparent;
         --bs-accordion-btn-focus-border-color: transparent;
         --bs-accordion-btn-focus-box-shadow: 0 0 0 0rem transparent;
@@ -675,14 +693,13 @@
         rotate: 0deg;
         @include transition;
         transform: translateY(5px);
-
     }
-
     .accordion-button::after {
         background-image: url('../img/angle_down.svg');
         @include transition;
     }
 }
+
 h2.accordion-header {
     background: transparent !important;
 }
@@ -691,7 +708,9 @@ button.accordion-button {
     background: transparent !important;
 }
 
+
 /* Faq__area CSS */
+
 .all_click_icons {
     position: absolute;
     top: 50%;
@@ -699,9 +718,21 @@ button.accordion-button {
     width: 100%;
     height: 100%;
     transform: translate(-50%, -50%);
-
+    &>* {
+        transition: all .3s ease-in-out;
+    }
+    &#\39 0deg .ss {
+        transform: rotate(-270deg);
+    }
+    &#\39 0deg .eff {
+        transform: rotate(270deg);
+    }
+    &#\31 80deg .eff {
+        transform: scaleY(-1);
+    }
 }
-@media(max-width:1200px) and (min-width:992px){
+
+@media(max-width:1200px) and (min-width:992px) {
     .all_click_icons {
         transform: translate(-50%, -50%);
     }
@@ -710,7 +741,6 @@ button.accordion-button {
 figure.w_i {
     position: relative;
 }
-
 
 .all_click_icons .sc {
     position: absolute;
@@ -723,7 +753,7 @@ figure.w_i {
     line-height: 84px;
     border-radius: 50%;
     opacity: 1;
-    @include mmd{
+    @include mmd {
         top: 51%;
         left: 28px;
     }
@@ -740,7 +770,7 @@ figure.w_i {
     line-height: 84px;
     border-radius: 50%;
     opacity: 1;
-    @include mmd{
+    @include mmd {
         left: 51%;
         bottom: 18px;
     }
@@ -757,7 +787,7 @@ figure.w_i {
     line-height: 84px;
     border-radius: 50%;
     opacity: 1;
-    @include mmd{
+    @include mmd {
         top: 51%;
         right: 38px;
     }
@@ -774,7 +804,7 @@ figure.w_i {
     line-height: 84px;
     border-radius: 50%;
     opacity: 1;
-    @include mmd{
+    @include mmd {
         left: 50%;
         top: 20px;
     }
